<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    tools:context="com.example.jim.superferry.activity.ActionMain">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relAppbar">

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/relAppbar"
            android:layout_above="@+id/relLayoutBot">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height= "wrap_content"
                android:text="@string/appname"
                android:layout_centerHorizontal="true"
                android:textSize="26sp"
                android:layout_marginTop="20dp"
                android:id="@+id/appname"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:layout_centerHorizontal="true"
                android:id="@+id/appversion"
                android:layout_below="@+id/appname" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/develop"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_below="@+id/appversion"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/develop" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stride"
                android:layout_below="@+id/develop"
                android:layout_toRightOf="@+id/develop"
                android:layout_toEndOf="@+id/develop"
                android:textSize="15sp"
                android:textColor="#000"
                android:id="@+id/developer"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:layout_below="@+id/developer"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:id="@+id/feedback"/>


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:id="@+id/relLayoutBot">

            <android.support.design.widget.BottomNavigationView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/navView_bar"
                android:background="@drawable/white_grey_border_bottom"
                app:menu="@menu/bottom_navigation">

            </android.support.design.widget.BottomNavigationView>
        </RelativeLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
