<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/textViewTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/textColor"
            android:text="@string/na"
            android:maxLines="1"/>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="134dp">

            <EditText
                android:id="@+id/edit_text_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textColorHint="#aeaeae"
                android:textCursorDrawable="@null"
                android:background="@color/textColor"
                android:drawableStart="@drawable/username"
                android:drawableLeft="@drawable/username"
                android:drawablePadding="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXWYZ1234567890_"
                android:inputType="textFilter"
                android:maxLines="1"
                android:singleLine="true"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="normal"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/textColor"
                android:hint="@string/password"
                android:textColorHint="#aeaeae"
                android:textCursorDrawable="@null"
                android:drawableStart="@drawable/lock"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXWYZ1234567890s"
                android:inputType="textPassword"
                android:maxLines="1"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="normal"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/cbShwPwd2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show password"
                android:textSize="15sp"
                android:textColor="@color/textColor"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg_layout"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                android:clickable="true"
                android:enabled="true"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="150dp"
                android:layout_marginRight="30dp"
                android:text="CREATE"/>

        </LinearLayout>

   </LinearLayout>
    </LinearLayout>

